--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,61 @@ build-essential
 autoconf
 automake
 direnv
+awscli
+nmap
+python3-requests
+python3-azure-cli
+python3-pkg-resources
+wfuzz
+tesseract-ocr
+ipcalc
+antiword
+docker.io
+docker-compose
+python3
+python3-pip
+python3-dev
+git
+libssl-dev
+libffi-dev
+build-essential
+prips
+libkrb5-dev
+dirb
+mingw-w64-tools
+mingw-w64-common
+g++-mingw-w64
+gcc-mingw-w64
+upx-ucl
+osslsigncode
+git
+direnv
+fzf
+pipx
+zsh
+cewl
+snapd
+make
+libpcap-dev
+python3-netifaces
+python-dev-is-python3
+build-essential
+libbz2-dev
+libreadline-dev
+libsqlite3-dev
+curl
+zlib1g-dev
+libncursesw5-dev
+xz-utils
+tk-dev
+libxml2-dev
+libxmlsec1-dev
+libffi-dev
+liblzma-dev
+direnv
+python3-quamash
+python3-pyfiglet
+python3-pandas
+python3-shodan
+patchelf
+python3-aioquic
