--- a/requirements.txt
+++ b/requirements.txt
@@ -5,28 +5,52 @@ curl
 wget
 git
 python3
+python3-pip
+python3-dev
+python3-requests
+python3-pkg-resources
+python3-netifaces
+python3-quamash
+python3-pyfiglet
+python3-pandas
+python3-shodan
+python3-aioquic
+python-dev-is-python3
 build-essential
 autoconf
 automake
 direnv
-forensics-all
-python3-requests
-python3-pkg-resources
+# forensics-all replaced with specific tools
+sleuthkit
+autopsy
+hashdeep
+foremost
+scalpel
+binwalk
+volatility
+testdisk
+ddrescue
+safecopy
+gddrescue
+guymager
 wfuzz
 tesseract-ocr
 ipcalc
 antiword
 docker.io
 docker-compose
-python3
-python3-pip
-python3-dev
-git
 libssl-dev
 libffi-dev
-build-essential
-prips
 libkrb5-dev
+libpcap-dev
+libbz2-dev
+libreadline-dev
+libsqlite3-dev
+libncursesw5-dev
+libxml2-dev
+libxmlsec1-dev
+liblzma-dev
+prips
 dirb
 mingw-w64-tools
 mingw-w64-common
@@ -34,32 +58,10 @@ g++-mingw-w64
 gcc-mingw-w64
 upx-ucl
 osslsigncode
-git
-direnv
-pipx
 cewl
 snapd
 make
-libpcap-dev
-python3-netifaces
-python-dev-is-python3
-build-essential
-libbz2-dev
-libreadline-dev
-libsqlite3-dev
-curl
+patchelf
 zlib1g-dev
-libncursesw5-dev
 xz-utils
 tk-dev
-libxml2-dev
-libxmlsec1-dev
-libffi-dev
-liblzma-dev
-direnv
-python3-quamash
-python3-pyfiglet
-python3-pandas
-python3-shodan
-patchelf
-python3-aioquic
