Trying to fix errors

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
+# Essential packages (high priority, widely available)
 jq
 zsh
-pipx
 curl
 wget
 git
@@ -9,39 +9,14 @@ python3-pip
 python3-dev
 python3-requests
 python3-pkg-resources
-python3-netifaces
-python3-quamash
-python3-pyfiglet
-python3-pandas
-python3-shodan
-python3-aioquic
 python-dev-is-python3
 build-essential
 autoconf
 automake
+make
 direnv
-# forensics-all replaced with specific tools
-sleuthkit
-autopsy
-hashdeep
-foremost
-scalpel
-binwalk
-volatility
-testdisk
-ddrescue
-safecopy
-gddrescue
-guymager
-wfuzz
-tesseract-ocr
-ipcalc
-antiword
-docker.io
-docker-compose
 libssl-dev
 libffi-dev
-libkrb5-dev
 libpcap-dev
 libbz2-dev
 libreadline-dev
@@ -50,18 +25,16 @@ libncursesw5-dev
 libxml2-dev
 libxmlsec1-dev
 liblzma-dev
-prips
-dirb
-mingw-w64-tools
-mingw-w64-common
-g++-mingw-w64
-gcc-mingw-w64
-upx-ucl
-osslsigncode
-cewl
-snapd
-make
-patchelf
 zlib1g-dev
 xz-utils
 tk-dev
+ipcalc
+testdisk
+ddrescue
+hashdeep
+foremost
+scalpel
+binwalk
+wfuzz
+antiword
+patchelf
