--- a/requirements.txt
+++ b/requirements.txt
@@ -1,66 +1,55 @@
-jq
-zsh
-curl
-wget
-git
-python3
-python3-pip
-python3-dev
-python3-requests
-python3-pkg-resources
-python-dev-is-python3
-build-essential
+antiword
 autoconf
 automake
-make
-direnv
-libssl-dev
-libffi-dev
-libpcap-dev
-libbz2-dev
-libreadline-dev
-libsqlite3-dev
-libncursesw5-dev
-libxml2-dev
-libxmlsec1-dev
-liblzma-dev
-zlib1g-dev
-xz-utils
-tk-dev
-ipcalc
-testdisk
-ddrescue
-hashdeep
-foremost
-scalpel
-binwalk
-wfuzz
-antiword
-patchelf
-pipx
-python3-netifaces
-python3-quamash
-python3-pyfiglet
-python3-pandas
-python3-shodan
-python3-aioquic
-docker.io
-docker-compose
-libkrb5-dev
-sleuthkit
-autopsy
-volatility
-safecopy
-gddrescue
-guymager
-tesseract-ocr
-prips
+build-essential
+cewl
+curl
 dirb
-mingw-w64-tools
-mingw-w64-common
+direnv
+docker-compose
+docker.io
 g++-mingw-w64
 gcc-mingw-w64
-upx-ucl
+git
+ipcalc
+jq
+libbz2-dev
+libffi-dev
+libkrb5-dev
+liblzma-dev
+libncursesw5-dev
+libpcap-dev
+libreadline-dev
+libsqlite3-dev
+libssl-dev
+libxml2-dev
+libxmlsec1-dev
+make
+mingw-w64-common
+mingw-w64-tools
+nmap
 osslsigncode
-cewl
+patchelf
+pipx
+prips
+python-dev-is-python3
+python3
+python3-aioquic
+python3-dev
+python3-netifaces
+python3-pandas
+python3-pip
+python3-pkg-resources
+python3-pyfiglet
+python3-quamash
+python3-requests
+python3-shodan
 snapd
+tesseract-ocr
+tk-dev
+upx-ucl
+wfuzz
+wget
+xz-utils
+zlib1g-dev
+zsh
