Clean up a lot of things

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,66 +1,120 @@
-# History
+# ===============================================================
+# TMUX Configuration - Optimized for macOS
+# ===============================================================
+
+# Terminal and Display Settings
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",*256col*:Tc"  # True color support
 set -g history-limit 50000
+set -g display-time 4000
+set -g status-interval 5
+set -g focus-events on
 
-set -g default-terminal "screen-256color"
+# Base Settings
+set -g base-index 1          # Start windows numbering at 1
+setw -g pane-base-index 1    # Start panes numbering at 1
+setw -g automatic-rename on  # Rename window to reflect current program
+set -g renumber-windows on   # Renumber windows when a window is closed
 
-#set -g status-bg orange
-#set -g status-fg black
+# ===============================================================
+# Key Bindings
+# ===============================================================
 
-# Rebind prefix key
-# remap prefix from 'C-b' to 'C-a'
-#unbind C-b
-#set-option -g prefix C-a
-#bind-key C-a send-prefix
-
+# Pane Management
 unbind %
-bind v split-window -h
+bind v split-window -h -c "#{pane_current_path}"  # Split vertically in current path
 
 unbind '"'
-bind h split-window -v
+bind h split-window -v -c "#{pane_current_path}"  # Split horizontally in current path
 
+# Configuration reload
 unbind r
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded!"
 
+# Pane resizing
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
 
+# Maximize/restore pane
 bind -r m resize-pane -Z
 
+# Mouse and Navigation
 set -g mouse on
+set -g escape-time 10                              # Faster command sequences
+unbind -T copy-mode-vi MouseDragEnd1Pane          # Don't exit copy mode when dragging
 
-unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
+# Vi mode settings
+setw -g mode-keys vi
+set -g status-keys vi
 
-set-window-option -g mode-keys vi
-
-# Shift arrow to switch windows
+# Window navigation (no prefix needed)
 bind -n S-Left  previous-window
 bind -n S-Right next-window
 
-# Use Alt-arrow keys without prefix key to switch panes
+# Pane navigation (no prefix needed)
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
-# Copy
-#for copying to sys clipboard
-bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
-bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
-bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
-bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
-#bind -T copy-mode-vi C-j send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
+# Smart pane switching with awareness of Vim splits
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
 
-# List of plugins
+# ===============================================================
+# Copy Mode Configuration (macOS optimized)
+# ===============================================================
 
+# Copy mode bindings
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+bind-key -T copy-mode-vi 'r' send -X rectangle-toggle
+
+# macOS clipboard integration
+bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+
+# Paste from clipboard
+bind p run "pbpaste | tmux load-buffer - && tmux paste-buffer"
+
+# ===============================================================
+# Plugins Configuration
+# ===============================================================
+
+# Core plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-logging'
-set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
-set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
-# Logging path
-set -g @logging-path "$PWD/.tmuxlogging"
+# Plugin settings
+set -g @logging-path "$HOME/.tmux/logs"        # Better logging path
+set -g @resurrect-capture-pane-contents 'on'   # Restore pane contents
+set -g @continuum-restore 'on'                 # Auto-restore on tmux start
+set -g @continuum-save-interval '15'           # Save every 15 minutes
 
-# VPN Config
-set -g status-right "#( /opt/tools/vpnpanel.sh ) #H %H:%M %d.%m.%Y "
+# Status bar configuration
+set -g status-position bottom
+set -g status-bg colour234
+set -g status-fg colour137
+set -g status-left ''
+set -g status-right-length 50
+set -g status-left-length 20
 
+# VPN Status and system info
+set -g status-right "#( /opt/tools/vpnpanel.sh ) #[fg=colour233,bg=colour241,bold] %H:%M #[fg=colour233,bg=colour245,bold] %d.%m.%Y "
+
+# Window status formatting
+setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
+setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+
+# ===============================================================
 # Initialize TMUX plugin manager (keep at bottom)
+# ===============================================================
 run '~/.tmux/plugins/tpm/tpm'
